--- a/app/src/main/res/layout/activity_navegacion.xml
+++ b/app/src/main/res/layout/activity_navegacion.xml
@@ -1,87 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".views.navegacionscreen.NavegacionActivity"
-android:background="@color/valle_dorado"
-android:gravity="center"
-    >
-
-
-
-<androidx.cardview.widget.CardView
-    android:id="@+id/cvCategorias"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="15dp"
-    android:layout_marginHorizontal="70dp"
-    android:paddingTop="100dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@color/valle_dorado"
+    tools:context=".views.navegacionscreen.NavegacionActivity">
 
-    app:cardElevation="10dp"
-    app:cardCornerRadius="5dp">
-
-    <LinearLayout
+    <!-- Tarjeta de Categorías -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvCategorias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="40dp"
+        app:cardElevation="6dp"
+        app:cardCornerRadius="12dp"
+        app:strokeColor="@color/gris_claro"
+        app:strokeWidth="2dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_lista"
-            android:background="@color/gris_claro"
-            android:contentDescription="ImageCategorias"
-            />
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CATEGORIAS"
-            android:textSize="20sp"
+            android:padding="16dp"
             android:gravity="center"
-            android:textStyle="bold"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/tarjetademenu"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/image_categorias"/>
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CATEGORÍAS"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="bold"/>
+        </LinearLayout>
 
-<androidx.cardview.widget.CardView
-    android:id="@+id/cvPlatillos"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="15dp"
-    android:layout_marginHorizontal="70dp"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="5dp">
+    </com.google.android.material.card.MaterialCardView>
 
-    <LinearLayout
+    <!-- Tarjeta de Platillos -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvPlatillos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="40dp"
+        app:cardElevation="6dp"
+        app:cardCornerRadius="12dp"
+        app:strokeColor="@color/gris_claro"
+        app:strokeWidth="2dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_platillos"
-            android:background="@color/gris_claro"
-            android:contentDescription="ImagePlatillos"
-            />
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PLATILLOS"
-            android:textSize="20sp"
+            android:padding="16dp"
             android:gravity="center"
-            android:textStyle="bold"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/icon_platillos"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/image_platillos"/>
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PLATILLOS"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="bold"/>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
