--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -13,6 +13,7 @@
         android:id="@+id/rvPlatillos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="110dp"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
