--- a/app/src/main/res/layout/item_rv_categoria.xml
+++ b/app/src/main/res/layout/item_rv_categoria.xml
@@ -1,65 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:padding="4dp"
-    android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    >
+    android:gravity="center">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCategorias"
-        android:layout_width="match_parent"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
-        app:cardElevation="8dp"
-        app:cardCornerRadius="4dp">
+        app:cardElevation="10dp"
+        app:cardCornerRadius="16dp"
+        app:cardBackgroundColor="@android:color/white"
+        android:layout_margin="4dp"
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
             <ImageView
                 android:id="@+id/ivCategoria"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:background="@color/valle_dorado"
-                android:src="@drawable/icon_falta_foto"
-                android:scaleType="centerInside"
-                app:layout_constraintBottom_toTopOf="@+id/tvNomCategoria"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="fitCenter"
+                android:contentDescription="Imagen de categoría"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/ibtnBorrar"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginVertical="5dp"
-                android:layout_marginHorizontal="5dp"
-                android:background="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon_bote_basura"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/tvNomCategoria"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:hint="NOMBRE CATEGORIA"
-                android:textSize="16sp"
+                android:text="Nombre Categoría"
                 android:textStyle="bold"
-                android:textColor="@color/gris_claro"
-                android:background="@color/gris_oscuro"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="14sp"
+                android:textColor="#333333"
+                app:layout_constraintTop_toBottomOf="@id/ivCategoria"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageButton
+                android:id="@+id/ibtnBorrar"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:backgroundTint="@android:color/white"
+                android:elevation="4dp"
+                android:background="@drawable/bg_circle_button"
+                android:src="@drawable/icon_bote_basura"
+                android:scaleType="centerInside"
+                android:padding="6dp"
+                android:contentDescription="Eliminar categoría"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
