--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- res/values/themes.xml -->
+        <item name="materialThemeOverlay">@style/Theme.Material3.DayNight.NoActionBar</item>
+
     </style>
 </resources>
